--- a/README
+++ b/README
@@ -11,7 +11,7 @@ Libtool supports building static libraries on all platforms.
 Shared library support has been implemented for these platforms:
   AIX 3.x (*-*-aix3*)
   AIX 4.x (*-*-aix4*)
-  Digital/UNIX 3.x, a.k.a. OSF/1 (*-*-osf3*)
+  Digital/UNIX 3.x, 4.x, a.k.a. OSF/1 (*-*-osf3*, *-*-osf4*)
   FreeBSD 2.x (*-*-freebsd*)
   HP-UX 9.x, 10.x (*-*-hpux9*, *-*-hpux10*)
   IRIX 5.x, 6.x (*-*-irix5*, *-*-irix6*)
