--- a/THANKS
+++ b/THANKS
@@ -3,6 +3,7 @@ these people:
 
 Akim Demaille <demaille@inf.enst.fr>
 Bruno Haible <haible@ilog.fr>
+Carl D. Roth <roth@cse.ucsc.edu>
 Charles S. Kerr <cskerr@delenn.jccbi.gov>
 Joel Cannon <cannon@alpha.centenary.edu>
 Karl Berry <kb@cs.umb.edu>
