--- a/NEWS
+++ b/NEWS
@@ -2,12 +2,12 @@ NEWS - list of user-visible changes between releases of GNU libtool.
 
 New in 0.9d:
 * Bug fixes.
-* Support for convenience libraries made of libtool objects.
-* New `-whole-archive' and `-no-whole-archive' linking flags.
-* New Autoconf macros, AM_REPLACE_FUNCS, AM_FUNC_ALLOCA, AM_FUNC_MEMCMP,
-  AM_STRUCT_ST_BLOCKS that set and substitute LTLIBOBJS and LTALLOCA.
 * Automake support for Libtool now uses the LTLIBRARIES primary.  See
   the Automake documentation for more information.
+* Basic support for dynamically loaded modules: new `-export-dynamic'
+  link flag and corresponding `dlname' mode.
+* Basic support for convenience libraries made of libtool objects: new
+  `-whole-archive' and `-no-whole-archive' linking flags.
 * Support *-*-linux-gnu* as an alias for *-*-linux*.
 
 New in 0.9:
