--- a/THANKS
+++ b/THANKS
@@ -6,6 +6,7 @@ Bruno Haible <haible@ilog.fr>
 Carl D. Roth <roth@cse.ucsc.edu>
 Charles S. Kerr <cskerr@delenn.jccbi.gov>
 Joel Cannon <cannon@alpha.centenary.edu>
+Joel N. Weber II <devnull@gnu.ai.mit.edu>
 Karl Berry <kb@cs.umb.edu>
 Mark Kettenis <kettenis@phys.uva.nl>
 Mimi Burbank <mimi@scri.fsu.edu>
