--- a/doc/platforms.texi
+++ b/doc/platforms.texi
@@ -12,24 +12,24 @@ hppa1.1-hp-hpux9.05          gcc       0.8       ok
 hppa1.1-hp-hpux10.10         cc        0.8       ok
 i386-unknown-freebsd2.1.5    gcc       0.5       ok
 i386-unknown-gnu0.0          gcc       0.5       ok
-i386-unknown-netbsd1.2       gcc       0.9d      ok
+i386-unknown-netbsd1.2       gcc       0.9e      ok
 i586-unknown-linux1.3.20     gcc       0.9       ok
-i586-unknown-linux2.0.16     gcc       0.9d      ok
+i586-unknown-linux2.0.16     gcc       0.9e      ok
 mips-sgi-irix5.3             cc        0.8       ok
 mips-sgi-irix5.3             gcc       0.8       ok
 mips-sgi-irix6.2             cc -32    0.9       ok
 mips-sgi-irix6.2             cc -n32   0.9       ok
 powerpc-ibm-aix4.1.4.0       xlc       0.9d      ok
 powerpc-ibm-aix4.1.4.0       gcc       0.9a      ok
-rs6000-ibm-aix3.2.5          xlc       0.9       fail
-rs6000-ibm-aix3.2.5          gcc       0.9       fail
-rs6000-ibm-aix4.1.4.0        xlc       0.9       ok
-rs6000-ibm-aix4.1.4.0        gcc       0.9       fail
+rs6000-ibm-aix3.2.5          xlc       0.9e      ok
+rs6000-ibm-aix3.2.5          gcc       0.9d      fail
+rs6000-ibm-aix4.1.4.0        xlc       0.9e      ok
+rs6000-ibm-aix4.1.4.0        gcc       0.9e      ok
 sparc-sun-linux2.1.23        gcc       0.9       ok
 sparc-sun-sunos4.1.3_U1      cc        0.9       ok
 sparc-sun-sunos4.1.3_U1      gcc       0.9       ok
 sparc-sun-solaris2.4         cc        0.9       ok
 sparc-sun-solaris2.4         gcc       0.9       ok
 sparc-sun-solaris2.5         cc        0.9       ok
-sparc-sun-solaris2.5         gcc       0.9d      ok
+sparc-sun-solaris2.5         gcc       0.9e      ok
 --------------------------------------------------------
